--- a/index.html
+++ b/index.html
@@ -49,3 +49,18 @@
     </footer>
 </body>
 </html>
+<script src="perguntas.js"></script>
+<script src="app.js"></script>
+<script src="perguntas.js"></script>
+cartao.innerHTML = `
+<div class="cartao__conteudo">
+<h3>Programação</h3>
+<div class="cartao__conteudo__pergunta">
+        <p>O que é JavaScript?</p>
+</div>
+<div class="cartao__conteudo__resposta">
+        <p>O JavaScript é uma linguagem de programação</p>
+</div>
+</div>
+`
+
