--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <p>O JavaScript é uma linguagem de programação</p>
                     </div>
                 </div>
-            </article>
+            </article><!-
             <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
